# Stitchy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo.yml  rust.yml
crates/stitchy/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/stitchy-core/: CHANGELOG.md  Cargo.toml  README.md
crates/stitchy-core/src/: enums.rs  files.rs  lib.rs  tests.rs
crates/stitchy-core/src/files/: builder.rs  fd.rs  image.rs  image_types.rs  mod.rs  path.rs  raw.rs  util.rs
crates/stitchy-core/src/image_set/: mod.rs  tests.rs
crates/stitchy-core/src/options/: mod.rs  tests.rs  v2.rs
crates/stitchy-core/src/stitch/: builder.rs  mod.rs  pen.rs  tests.rs
crates/stitchy/src/: file_util.rs  main.rs  print.rs  tests.rs
crates/stitchy/src/options/: mod.rs  tests.rs  v1.rs  v2.rs  v3.rs  v4.rs
crates/stitchy/src/profiles/: tests.rs
src/: enums.rs  files.rs  image_set.rs  main.rs  options.rs  print.rs  profiles.rs
src/files/: mod.rs  util.rs
src/image_set/: tests.rs
src/options/: mod.rs  tests.rs  v1.rs  v2.rs
src/profiles/: mod.rs
