[package]
name = "stitchy"
version = "0.1.2"
authors = ["Thomas Reichert"]
edition = "2018"
license = "MIT"
description = "Combine multiple image files into a single image"
repository = "https://github.com/grimace87/Stitchy"
readme = "README.md"
keywords = ["image", "join"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [
    "/images/testing/",
    "/.dockerignore",
    "/.Dockerfile"
]

[dependencies]
structopt = { version = "0.3.3", default-features = false }
image = { version = "0.23.4", default-features = false, features = ["jpeg", "png", "gif", "bmp"] }
