[package]
name = "stitchy-core"
version = "0.1.4"
authors = ["Thomas Reichert"]
edition = "2021"
license = "MIT"
description = "Library to combine multiple image files into a single image"
repository = "https://github.com/grimace87/Stitchy"
readme = "README.md"
keywords = ["image", "join"]
categories = ["multimedia::images"]

[dependencies]
clap = { workspace = true, optional = true }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
serde = { version = "1.0.155", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }

[features]
parser = ["dep:clap", "dep:serde", "dep:serde_json"]
