[package]
name = "stitchy"
version = "0.1.8"
authors = ["Thomas Reichert"]
edition = "2021"
license = "MIT"
description = "CLI tool to combine multiple image files into a single image"
repository = "https://github.com/grimace87/Stitchy"
readme = "README.md"
keywords = ["image", "join"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { workspace = true }
home = "0.5.11"
termsize = "0.1.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
stitchy-core = { path = "../stitchy-core", version = "0.1.3", features = ["parser"] }
